<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.overview.bill.code.BillCodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_name_input"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_shop_input"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payments_input"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tax"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guest_money_input"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_money"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_customer"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:textStyle="italic"
                            android:text="@string/customer_code"
                            android:layout_marginBottom="16dp"
                            android:textColor="@color/green_secondary"/>

                        <ImageView
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/qr_image"
                            android:scaleType="fitCenter"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/lorem"
                            android:textColor="@color/green_secondary"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>