<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green_background"
    tools:context=".ui.order.PrepareBillFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/payments"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/green_primary"/>

                <Spinner
                    android:id="@+id/cashSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/shape_rounded_border"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/table_name"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/green_primary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/tax"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/green_primary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/total"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/green_primary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/guest_money"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/green_primary"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginStart="4dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/customerMoney"
                    android:textColor="@color/green_secondary"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/change_money"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/green_primary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/code_bill"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/green_primary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/lorem"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:background="@drawable/shape_rounded_border"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/green_secondary"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/phone_customer"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/green_primary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/order_id"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/green_primary"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>