<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.overview.OverviewFragment"
    android:background="@color/green_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:id="@+id/descriptionOverView">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_bill"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/revenue"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agv_per_bill"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/investment"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/green_secondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profit"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/green_secondary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="bottom">

                        <EditText
                            android:id="@+id/editTextChooseDateOverview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:hint="YYYY-MM-DD"
                            android:inputType="date"
                            android:textColor="@color/green_secondary"/>

                    </LinearLayout>

                </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonsOverview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:text="@string/overview_list"
                    android:textSize="11sp"
                    android:textColor="@color/green_primary"
                    android:background="@drawable/button_secondary_container_solid"
                    android:padding="10dp"
                    android:elevation="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/import_investment"
                    android:textSize="10sp"
                    android:textColor="@color/green_primary"
                    android:background="@drawable/button_secondary_container_solid"
                    android:padding="10dp"
                    android:elevation="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:text="@string/choose_calendar"
                    android:textSize="11sp"
                    android:textColor="@color/green_primary"
                    android:background="@drawable/button_secondary_container_solid"
                    android:padding="10dp"
                    android:elevation="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_primary"/>

        <LinearLayout
            android:id="@+id/chartOverView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.BarChart
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/barChart"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>