<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.table.config.ConfigTableFragment"
    android:background="@color/green_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_unlock_table"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="14dp"
            android:textColor="@color/green_primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/lockTableBtn"
                android:layout_width="230dp"
                android:layout_height="80dp"
                android:text="@string/lock"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_secondary_container_solid"
                android:padding="10dp"
                android:elevation="20dp"
                android:textColor="@color/green_primary"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seeDetailTableBtn"
                android:layout_width="230dp"
                android:layout_height="80dp"
                android:text="@string/see_detail_order"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_secondary_container_solid"
                android:padding="10dp"
                android:elevation="20dp"
                android:textColor="@color/green_primary"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/unlockTableBtn"
                android:layout_width="230dp"
                android:layout_height="80dp"
                android:text="@string/unlock"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_secondary_container_solid"
                android:textColor="@color/green_primary"
                android:padding="10dp"
                android:elevation="20dp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>