<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.profile.ProfileFragment"
    android:background="@color/green_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:background="@drawable/shape_rounded_border"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="28dp"
                    android:elevation="18dp"
                    android:id="@+id/imgProfile"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/green_primary"
                    android:id="@+id/profileName"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start"
                    android:padding="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_profile"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="28dp"
                        android:textColor="@color/green_primary"
                        android:id="@+id/phoneProfile"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role_profile"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="28dp"
                        android:textColor="@color/green_primary"
                        android:id="@+id/role"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exp_profile"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="28dp"
                        android:textColor="@color/green_primary"
                        android:id="@+id/exp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email: vialahnq@gmail.com"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="28dp"
                        android:textColor="@color/green_primary"
                        android:id="@+id/emailProfile"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_profile"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/green_primary"
                        android:id="@+id/addressProfile"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>



</FrameLayout>